syntax = "proto3";

package proto.fetcher;

import "fetcher/data_types.proto";

message FetcherRequest {
  oneof fetcher_type {
    DirectFetcher direct_fetcher = 1;
    FilteredFetcher filtered_fetcher = 2;
  }
}

message FetcherResponse {
  oneof fetched_data {
    DisciplineCollection discipline_collection = 1;
    ProjectHierarchy project_hierarchy = 2;
    DepartmentHierarchy department_hierarchy = 3;
    // Add more as more types are supported
  }
}

message DirectFetcher {
  DirectType direct_type = 1;
}

enum DirectType {
  DIRECT_TYPE_UNSPECIFIED = 0;
  DIRECT_TYPE_DEPARTMENTS = 1; // deprecated
  DIRECT_TYPE_DISCIPLINES = 2;
  // Add more if needed, e.g. Majors, Umbrella topics, etc.
}

message FilteredFetcher {
  FilteredType filtered_type = 1;

  // Filter parameters. Can be reused for different types.
  repeated int32 major_ids = 2;
  repeated int32 research_period_ids = 3;
  repeated int32 umbrella_topic_ids = 4;
  string keywords = 5;
}

enum FilteredType {
  FILTERED_TYPE_UNSPECIFIED = 0;
  FILTERED_TYPE_PROJECTS = 1;
  FILTERED_TYPE_STUDENTS = 2;
  FILTERED_TYPE_FACULTY = 3;
  // Add more if needed
}
